Integrated using code-processor with http handlers
