# docs/swagger.json
@@ -252,7 +252,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/storage.Task"
+                            "$ref": "#/definitions/http.TaskRequest"
                         }
                     }
                 ],
@@ -289,6 +289,17 @@
         }
     },
     "definitions": {
+        "http.TaskRequest": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "language": {
+                    "type": "string"
+                }
+            }
+        },
         "http.UserRequest": {
             "type": "object",
             "properties": {
@@ -296,21 +307,6 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "storage.Task": {
-            "description": "Данные задачи",
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "result": {
-                    "type": "string"
-                },
-                "status": {
                     "type": "string"
                 }
             }
